tests/ui/attributes/args-checked.stderr
error[E0539]: malformed `inline` attribute input
  --> $DIR/args-checked.rs:6:1
   |
LL | #[inline(always = 5)]
   | ^^^^^^^^^----------^^
   |          |
   |          valid arguments are `always` or `never`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-inline-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[inline(always = 5)]
LL + #[inline(always)]
   |
LL - #[inline(always = 5)]
LL + #[inline(never)]
   |
LL - #[inline(always = 5)]
LL + #[inline]
   |

error[E0539]: malformed `inline` attribute input
  --> $DIR/args-checked.rs:8:1
   |
LL | #[inline(always(x, y, z))]
   | ^^^^^^^^^---------------^^
   |          |
   |          valid arguments are `always` or `never`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-inline-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[inline(always(x, y, z))]
LL + #[inline(always)]
   |
LL - #[inline(always(x, y, z))]
LL + #[inline(never)]
   |
LL - #[inline(always(x, y, z))]
LL + #[inline]
   |

error[E0539]: malformed `instruction_set` attribute input
  --> $DIR/args-checked.rs:10:1
   |
LL | #[instruction_set(arm::a32 = 5)]
   | ^^^^^^^^^^^^^^^^^^------------^^
   | |                 |
   | |                 valid arguments are `arm::a32` or `arm::t32`
   | help: must be of the form: `#[instruction_set(set)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-instruction_set-attribute>

error[E0539]: malformed `instruction_set` attribute input
  --> $DIR/args-checked.rs:12:1
   |
LL | #[instruction_set(arm::a32(x, y, z))]
   | ^^^^^^^^^^^^^^^^^^-----------------^^
   | |                 |
   | |                 valid arguments are `arm::a32` or `arm::t32`
   | help: must be of the form: `#[instruction_set(set)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-instruction_set-attribute>

error[E0539]: malformed `optimize` attribute input
  --> $DIR/args-checked.rs:14:1
   |
LL | #[optimize(size = 5)]
   | ^^^^^^^^^^^--------^^
   |            |
   |            valid arguments are `size`, `speed` or `none`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[optimize(size = 5)]
LL + #[optimize(none)]
   |
LL - #[optimize(size = 5)]
LL + #[optimize(size)]
   |
LL - #[optimize(size = 5)]
LL + #[optimize(speed)]
   |

error[E0539]: malformed `optimize` attribute input
  --> $DIR/args-checked.rs:16:1
   |
LL | #[optimize(size(x, y, z))]
   | ^^^^^^^^^^^-------------^^
   |            |
   |            valid arguments are `size`, `speed` or `none`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[optimize(size(x, y, z))]
LL + #[optimize(none)]
   |
LL - #[optimize(size(x, y, z))]
LL + #[optimize(size)]
   |
LL - #[optimize(size(x, y, z))]
LL + #[optimize(speed)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/args-checked.rs:18:1
   |
LL | #[coverage(off = 5)]
   | ^^^^^^^^^^^-------^^
   |            |
   |            valid arguments are `on` or `off`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage(off = 5)]
LL + #[coverage(off)]
   |
LL - #[coverage(off = 5)]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/args-checked.rs:20:1
   |
LL | #[coverage(off(x, y, z))]
   | ^^^^^^^^^^^------------^^
   |            |
   |            valid arguments are `on` or `off`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage(off(x, y, z))]
LL + #[coverage(off)]
   |
LL - #[coverage(off(x, y, z))]
LL + #[coverage(on)]
   |

error[E0539]: malformed `rustc_abi` attribute input
  --> $DIR/args-checked.rs:22:1
   |
LL | #[rustc_abi(debug = 5)]
   | ^^^^^^^^^^^-----------^
   |            |
   |            valid arguments are `assert_eq` or `debug`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_abi(debug = 5)]
LL + #[rustc_abi(assert_eq)]
   |
LL - #[rustc_abi(debug = 5)]
LL + #[rustc_abi(debug)]
   |

error[E0539]: malformed `rustc_abi` attribute input
  --> $DIR/args-checked.rs:24:1
   |
LL | #[rustc_abi(debug(x, y, z))]
   | ^^^^^^^^^^^----------------^
   |            |
   |            valid arguments are `assert_eq` or `debug`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_abi(debug(x, y, z))]
LL + #[rustc_abi(assert_eq)]
   |
LL - #[rustc_abi(debug(x, y, z))]
LL + #[rustc_abi(debug)]
   |

error: `rustc_allow_const_fn_unstable` expects feature names
  --> $DIR/args-checked.rs:40:33
   |
LL | #[rustc_allow_const_fn_unstable(x = 5)]
   |                                 ^^^^^

error: `rustc_allow_const_fn_unstable` expects feature names
  --> $DIR/args-checked.rs:42:33
   |
LL | #[rustc_allow_const_fn_unstable(x(x, y, z))]
   |                                 ^^^^^^^^^^

error[E0539]: malformed `used` attribute input
  --> $DIR/args-checked.rs:46:1
   |
LL | #[used(always = 5)]
   | ^^^^^^^----------^^
   |        |
   |        valid arguments are `compiler` or `linker`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[used(always = 5)]
LL + #[used(compiler)]
   |
LL - #[used(always = 5)]
LL + #[used(linker)]
   |
LL - #[used(always = 5)]
LL + #[used]
   |

error[E0539]: malformed `used` attribute input
  --> $DIR/args-checked.rs:48:1
   |
LL | #[used(always(x, y, z))]
   | ^^^^^^^---------------^^
   |        |
   |        valid arguments are `compiler` or `linker`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[used(always(x, y, z))]
LL + #[used(compiler)]
   |
LL - #[used(always(x, y, z))]
LL + #[used(linker)]
   |
LL - #[used(always(x, y, z))]
LL + #[used]
   |

error[E0539]: malformed `rustc_must_implement_one_of` attribute input
  --> $DIR/args-checked.rs:52:1
   |
LL | #[rustc_must_implement_one_of(eq = 5, neq)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------^^^^^^^
   | |                             |
   | |                             expected a valid identifier here
   | help: must be of the form: `#[rustc_must_implement_one_of(function1, function2, ...)]`

error[E0539]: malformed `rustc_must_implement_one_of` attribute input
  --> $DIR/args-checked.rs:54:1
   |
LL | #[rustc_must_implement_one_of(eq(x, y, z), neq)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----------^^^^^^^
   | |                             |
   | |                             expected a valid identifier here
   | help: must be of the form: `#[rustc_must_implement_one_of(function1, function2, ...)]`

error[E0565]: malformed `rustc_dump_layout` attribute input
  --> $DIR/args-checked.rs:60:1
   |
LL | #[rustc_dump_layout(debug = 5)]
   | ^^^^^^^^^^^^^^^^^^^^---------^^
   |                     |
   |                     didn't expect a literal here

error[E0565]: malformed `rustc_dump_layout` attribute input
  --> $DIR/args-checked.rs:62:1
   |
LL | #[rustc_dump_layout(debug(x, y, z))]
   | ^^^^^^^^^^^^^^^^^^^^--------------^^
   |                     |
   |                     didn't expect a literal here

error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:30:1
   |
LL | #[macro_export(local_inner_macros = 5)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(invalid_macro_export_arguments)]` (part of `#[deny(future_incompatible)]`) on by default

error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:33:1
   |
LL | #[macro_export(local_inner_macros(x, y, z))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>

error: aborting due to 20 previous errors

Some errors have detailed explanations: E0539, E0565.
For more information about an error, try `rustc --explain E0539`.
Future incompatibility report: Future breakage diagnostic:
error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:30:1
   |
LL | #[macro_export(local_inner_macros = 5)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(invalid_macro_export_arguments)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:33:1
   |
LL | #[macro_export(local_inner_macros(x, y, z))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(invalid_macro_export_arguments)]` (part of `#[deny(future_incompatible)]`) on by default

